@@ -74,7 +74,7 @@ class LongleyGls(object):
                 1022.236970,  556.069099, -505.899787, -263.775842, 253.871965, 
                 149.579309, -47.873374]
         self.scale = 542.443043098**2
-        self.t = [6.296088, -3.092039, 6.805337]
+        self.tvalues = [6.296088, -3.092039, 6.805337]
         self.pvalues = [2.761673e-05, 8.577197e-03, 1.252284e-05]
         self.bic = 253.118790021
         self.aic = 250.858992591
